--- a/android_CourseStudy/app/src/main/res/layout/activity_register.xml
+++ b/android_CourseStudy/app/src/main/res/layout/activity_register.xml
@@ -5,18 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bgimage"
+    android:background="@drawable/background2"
     tools:context=".activity.RegisterActivity">
 
     <include layout="@layout/tool_bar"/>
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/iv_picture"
-        android:src="@drawable/picture_f"
-        android:layout_marginTop="20sp"
+        android:src="@drawable/sunming"
+        android:layout_marginTop="50sp"
+        android:layout_marginBottom="20sp"
         android:layout_gravity="center"
-        android:layout_width="120sp"
-        android:layout_height="120sp"
+        android:layout_width="100sp"
+        android:layout_height="100sp"
         app:riv_oval="true"/>
 
     <EditText
@@ -98,7 +99,7 @@
         android:id="@+id/register_btn"
         android:layout_width="300sp"
         android:layout_height="40sp"
-        android:background="#f3ad02"
+        android:background="#42C3FF"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:textColor="@android:color/white"
