--- a/android_CourseStudy/app/src/main/res/layout/activity_forget_pwd.xml
+++ b/android_CourseStudy/app/src/main/res/layout/activity_forget_pwd.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgimage"
+    android:background="@drawable/background2"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".activity.Forget_pwd_Activity">
