--- a/android_CourseStudy/app/src/main/res/layout/activity_modify_pwd.xml
+++ b/android_CourseStudy/app/src/main/res/layout/activity_modify_pwd.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bgimage"
+    android:background="@drawable/background2"
     tools:context=".activity.modify_pwd_Activity">
     <include layout="@layout/tool_bar"/>
     
