--- a/android_CourseStudy/app/src/main/res/layout/activity_my.xml
+++ b/android_CourseStudy/app/src/main/res/layout/activity_my.xml
@@ -17,10 +17,11 @@
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_picture"
             android:src="@drawable/sunming"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="30sp"
+            android:layout_marginBottom="20sp"
             android:layout_gravity="center"
-            android:layout_width="120sp"
-            android:layout_height="120sp"
+            android:layout_width="100sp"
+            android:layout_height="100sp"
             app:riv_oval="true"/>
 
         <TextView
