--- a/android_CourseStudy/app/src/main/res/layout/activity_user_info.xml
+++ b/android_CourseStudy/app/src/main/res/layout/activity_user_info.xml
@@ -32,7 +32,7 @@
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/my_picture"
-            android:src="@drawable/picture_f"
+            android:src="@drawable/sunming"
             android:layout_gravity="center"
             android:layout_width="50sp"
             android:layout_height="match_parent"
