--- a/android_CourseStudy/app/src/main/res/layout/my_fragment.xml
+++ b/android_CourseStudy/app/src/main/res/layout/my_fragment.xml
@@ -14,7 +14,7 @@
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_picture"
-            android:src="@drawable/picture_f"
+            android:src="@drawable/sunming"
             android:layout_marginTop="20sp"
             android:layout_gravity="center"
             android:layout_width="120sp"
